# locus-forge

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
packaging/: PKGBUILD  locus-forge.desktop
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  model.rs  normalizer.rs  publish.rs  ratelimit.rs  state.rs
src-tauri/src/sources/: mod.rs  wikidata.rs
src/lib/: BrowsePanel.svelte  CaseEditor.svelte  CrawlPanel.svelte  PublishPanel.svelte  SettingsPanel.svelte  api.ts  types.ts
