[package]
name = "locus-forge"
version = "0.1.4"
description = "Locus Forge — crawler e curation tool per il database di Locus Criminis"
authors = ["russus"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "locus_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
